--- a/ZoomerFit/Base.lproj/Main.storyboard
+++ b/ZoomerFit/Base.lproj/Main.storyboard
@@ -400,11 +400,11 @@ Rating: 5/5</string>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P42-QF-su7">
-                                                    <rect key="frame" x="206" y="19" width="208" height="101"/>
+                                                    <rect key="frame" x="205" y="16" width="206" height="102"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8es-Wh-FoA">
-                                                    <rect key="frame" x="35" y="25" width="379" height="88"/>
+                                                    <rect key="frame" x="34" y="22" width="377" height="90"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -460,10 +460,10 @@ Rating: 5/5</string>
             </objects>
             <point key="canvasLocation" x="-3384" y="2735"/>
         </scene>
-        <!--View Controller-->
+        <!--Muscle View Controller-->
         <scene sceneID="V5g-3k-brs">
             <objects>
-                <viewController id="Mv1-MS-4UE" sceneMemberID="viewController">
+                <viewController id="Mv1-MS-4UE" customClass="MuscleViewController" customModule="ZoomerFit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Duz-yY-Y5E">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -490,6 +490,7 @@ Rating: 5/5</string>
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 </state>
                                 <connections>
+                                    <action selector="backButtonTouched:" destination="Mv1-MS-4UE" eventType="touchUpInside" id="BHH-ai-xEd"/>
                                     <segue destination="ncp-MA-roa" kind="show" id="WJi-Ep-AVA"/>
                                 </connections>
                             </button>
@@ -501,6 +502,7 @@ Rating: 5/5</string>
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 </state>
                                 <connections>
+                                    <action selector="armsButtonTouched:" destination="Mv1-MS-4UE" eventType="touchUpInside" id="6O6-5A-ccE"/>
                                     <segue destination="HLj-wj-VVa" kind="show" id="HwQ-WU-p1i"/>
                                 </connections>
                             </button>
@@ -511,6 +513,9 @@ Rating: 5/5</string>
                                 <state key="normal" title="STOMACH" backgroundImage="stomach.png">
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="stomachButtonTouched:" destination="Mv1-MS-4UE" eventType="touchUpInside" id="QgZ-dj-uBJ"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ld0-cY-lDK">
                                 <rect key="frame" x="209" y="330" width="147" height="116"/>
@@ -519,6 +524,10 @@ Rating: 5/5</string>
                                 <state key="normal" title="CHEST" backgroundImage="chest.png">
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="chestButtonPressed:" destination="Mv1-MS-4UE" eventType="touchUpInside" id="lVw-pw-kC5"/>
+                                    <segue destination="ncp-MA-roa" kind="show" id="Y4i-ks-bVW"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -773,15 +782,15 @@ Rating: 5/5</string>
         <scene sceneID="94l-IW-tcs">
             <objects>
                 <viewController id="sDq-Nw-pcB" customClass="WorkoutViewController" customModule="ZoomerFit" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="cVx-D2-dhj">
+                    <view key="view" contentMode="scaleToFill" id="cVx-D2-dhj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="900"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AJn-i5-hhx">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xEI-lN-Fo6">
-                                        <rect key="frame" x="0.0" y="0.0" width="401" height="812"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xEI-lN-Fo6">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="729"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Weight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wkP-8Z-Ntf">
                                                 <rect key="frame" x="81" y="155" width="110" height="42"/>
@@ -853,15 +862,15 @@ Rating: 5/5</string>
                                                     <action selector="clearButtonPressed:" destination="sDq-Nw-pcB" eventType="touchUpInside" id="bLf-jm-YSo"/>
                                                 </connections>
                                             </button>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rNT-VH-klO">
-                                                <rect key="frame" x="20" y="165" width="361" height="327"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rNT-VH-klO">
+                                                <rect key="frame" x="20" y="82" width="361" height="327"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="327" id="iXg-G1-R4i"/>
                                                     <constraint firstAttribute="width" constant="361" id="qFm-Lh-bIz"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cr4-XB-kGl">
-                                                <rect key="frame" x="20" y="512" width="361" height="280"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cr4-XB-kGl">
+                                                <rect key="frame" x="20" y="429" width="374" height="280"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="XhT-g9-k0i"/>
                                                 </constraints>
@@ -877,8 +886,8 @@ Rating: 5/5</string>
                                                     <action selector="backButtonPressed:" destination="sDq-Nw-pcB" eventType="touchUpInside" id="Kq4-So-wNP"/>
                                                 </connections>
                                             </button>
-                                            <segmentedControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xRm-GJ-7Sf">
-                                                <rect key="frame" x="20" y="100" width="361" height="36"/>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xRm-GJ-7Sf">
+                                                <rect key="frame" x="20" y="21" width="374" height="32"/>
                                                 <segments>
                                                     <segment title="Description"/>
                                                     <segment title="Set 1"/>
@@ -989,9 +998,6 @@ Rating: 5/5</string>
             <point key="canvasLocation" x="-586.95652173913049" y="968.97321428571422"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="Mhj-Wy-6ck"/>
-    </inferredMetricsTieBreakers>
     <resources>
         <image name="The-Rock-Dwayne-Johnson-gym-9.jpg" width="1080" height="1080"/>
         <image name="ZoomerFitLogo.png" width="1002" height="267"/>
@@ -1023,6 +1029,7 @@ Rating: 5/5</string>
         <image name="zoomer login background.png" width="274.55999755859375" height="540"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="FxV-wy-6CO"/>
+        <segue reference="9Rj-cb-JXX"/>
+        <segue reference="Y4i-ks-bVW"/>
     </inferredMetricsTieBreakers>
 </document>
